create final *nix/windows user packages, with friendly CLI